add example round_shape

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>bratik</title>
   </head>
   <body>
+    <input type="range" min="0" max="100" value="20">
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
