add info to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <input type="range" min="0" max="100" value="20">
+    <p>click/tap to create points</p>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
