--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <body>
     <input type="range" min="0" max="100" value="20">
     <p>click/tap to create points</p>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
