--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
+    <link rel="stylesheet" href="./public/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bratik</title>
   </head>
   <body>
     <input type="range" min="0" max="100" value="20">
     <p>click/tap to create points</p>
-    <script type="module" src="/public/demo.js"></script>
+    <script type="module" src="./public/demo.js"></script>
   </body>
 </html>
