--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <input type="range" min="0" max="100" value="20">
-    <p>click/tap to create points</p>
+    <p>click/tap<br>to create points</p>
     <script type="module" src="./public/demo.js"></script>
   </body>
 </html>
