--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <input type="range" min="0" max="100" value="20">
-    <p>click/tap to create points</p>
+    <p>click/tap<br>to create points</p>
     <script type="module" src="/src/demo.ts"></script>
   </body>
 </html>
