update public hot

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>bratik</title>
   </head>
   <body>
-    <input type="range" min="0" max="100" value="20">
+    <label>
+      <span>radius</span>
+      <input type="range" min="0" max="100" value="20">
+      <span id="radiusvalue"></span>
+    </label>
     <p>click/tap<br>to create points</p>
     <script type="module" src="./public/demo.js"></script>
   </body>
