--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -7,6 +7,6 @@
     <title>bratik</title>
   </head>
   <body>
-    <script type="module" src="/src/demo.ts"></script>
+    <script type="module" src="./demo.ts"></script>
   </body>
 </html>
